--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1288,10 +1288,10 @@ section {
   color: #34b7a7;
 }
 #hero h1 {
-  color: #E1AFD1; /* Ubah warna teks judul sesuai keinginan Anda */
+  color: #D7E4C0; /* Ubah warna teks judul sesuai keinginan Anda */
 }
 #hero h2 {
-  color: #E1AFD1; /* Ubah warna teks subjudul sesuai keinginan Anda */
+  color: #D7E4C0; /* Ubah warna teks subjudul sesuai keinginan Anda */
 }
 #hero h2 {s
   font-size: 28px; /* Ganti nilai 24px dengan ukuran font yang Anda inginkan */
